--- a/project1.html
+++ b/project1.html
@@ -3,9 +3,17 @@
     <head>
         <title>Self Identification</title>
         <script src="scripts/jquery-3.5.1.min.js"></script>
-        <script>$(document).ready(function(){console.log("$("#fname")");});</script>
+        <script>
+            $(document).ready(function()
+            {
+                console.log(
+                        $("#fname")
+                    );
+                    
+            });
+        </script>
     </head>    
-
+<!--tests-->
 
     <body>
         <h3>Information</h3>
