--- a/project1.html
+++ b/project1.html
@@ -7,7 +7,7 @@
             $(document).ready(function()
             {
                 console.log(
-                        $("#fname")
+                        $("#fname").val()
                     );
                     
             });
@@ -84,7 +84,7 @@
                     <option value="2020">2020</option>
                 <select>
             </p>
-            <input type="submit" value="Submit">
+            <button type="button">Submit</button>
         </form>
 
 
